--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.5.0",
+    "@clerk/nextjs": "^5.3.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "convex": "^1.15.0",
     "lucide-react": "^0.437.0",
     "next": "14.2.7",
     "react": "^18",
